# forestfire-cv-detection

./: .dockerignore  .env example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml
spaces/: app.py  requirements.txt
src/: cli.py
src/ingestion/: download.py
src/processing/: process.py  resize.py  validate.py
src/serving/: app.py
src/training/: train.py
src/utils/: config.py  logging.py  s3.py
tests/: test_api.py  test_cli.py  test_config.py  test_resize.py  test_validate.py
