[project]
name = "forestfire-cv-detection"
version = "1.0.0"
description = "Wildfire smoke detection using YOLOv8"
requires-python = ">=3.11"
dependencies = [
    # Ingestion
    "roboflow>=0.2.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",

    # Processing
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "scikit-learn>=1.3.0",

    # Training
    "ultralytics>=8.0.0",
    "mlflow>=2.7.0",

    # Serving
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
smoke = "src.cli:smoke"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
